# webserver-rs

./: Cargo.toml  README.md
.github/workflow/: cicd.yml
.github/workflows/: cicd.yml
migrations/2024-10-05-091934_create_users_table/: up.sql
migrations/2024-10-06-080038_create_refresh_tokens/: up.sql
migrations/2024-10-06-103657_add_refresh_token_to_users/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/controllers/: auth.rs
src/dto/: auth_response.rs  claims.rs  login_user.rs  mod.rs  register_user.rs  user.rs
src/middleware/: auth.rs  mod.rs
src/repositories/: refresh_token_repository.rs  user_repository.rs
src/services/: auth_service.rs
tests/: integration_tests.rs
