[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2", "sqlite"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.17"
uuid = { version = "1.3.3", features = ["v4"] }
actix-web-httpauth = "0.8.0"
time = "0.3.21"
derive_more = "0.99.17"
actix-cors = "0.6.4"
futures = "0.3.28"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
test = ["sqlite"]

[dev-dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
